/*
Copyright 2021 The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package feature;

// Package-wide variables from generator "generated".
option go_package = "sigs.k8s.io/node-feature-discovery/pkg/api/feature";

// DomainFeatures is the collection of all discovered features of one domain.
message DomainFeatures {
  map<string, KeyFeatures> keys = 1;

  map<string, ValueFeatures> values = 2;

  map<string, InstanceFeatures> instances = 3;
}

// InstanceFeature represents one instance of a complex features, e.g. a device.
message InstanceFeature {
  map<string, string> attributes = 1;
}

// InstanceFeatures is a set of features each of which is an instance having multiple attributes.
message InstanceFeatures {
  repeated InstanceFeature features = 1;
}

// KeyFeatures is a set of simple features only containing names without values.
message KeyFeatures {
  map<string, Nil> features = 1;
}

// Nil is a  summy empty struct for protobuf compatibility
message Nil {
}

// ValueFeatures is a set of features having string value.
message ValueFeatures {
  map<string, string> features = 1;
}

